--- a/views/alarm.ejs
+++ b/views/alarm.ejs
@@ -201,12 +201,12 @@
 			//L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 				attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 			}).addTo(map);
-				
-			var overlay;
-			L.tileLayer('http://tiles.wmflabs.org/hillshading/{z}/{x}/{y}.png').addTo(map);
-			overlay = L.tileLayer('{z}/{x}/{y}.png', {
-				opacity: 1.5
-			}).addTo(map);
+						
+			// var overlay;
+			// L.tileLayer('http://tiles.wmflabs.org/hillshading/{z}/{x}/{y}.png').addTo(map);
+			// overlay = L.tileLayer('{z}/{x}/{y}.png', {
+			// 	opacity: 1.5
+			//   }).addTo(map);
 	
 			
 			var icons = {
